[gd_scene load_steps=7 format=2]

[ext_resource path="res://Other/Fonts/lemon/19919.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Utils/Dialogs/GameOverDialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Utils/Dialogs/DialogManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://Other/Themes/MenusThemes.tres" type="Theme" id=4]
[ext_resource path="res://Scripts/Menus/GameOverMenu/GameOverScreen.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="GameOverScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 300 )
current = true

[node name="BlackBackground" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 362.0
margin_top = 59.0
margin_right = 662.0
margin_bottom = 540.0
custom_constants/separation = 30

[node name="GameOverText" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 100 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=2][color=#D63535][center]Game Over[/center][/color][/wave]"
text = "Game Over"

[node name="GameOverDialog" parent="CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 130.0
margin_right = 300.0
margin_bottom = 280.0

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 310.0
margin_right = 300.0
margin_bottom = 347.0
mouse_default_cursor_shape = 2
text = "Continue"

[node name="SaveMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 377.0
margin_right = 300.0
margin_bottom = 414.0
mouse_default_cursor_shape = 2
text = "Save menu"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 444.0
margin_right = 300.0
margin_bottom = 481.0
mouse_default_cursor_shape = 2
text = "Main menu"

[node name="DialogManager" parent="." instance=ExtResource( 3 )]
mouse_filter = 2
DIALOGS = [ {
"dialog": "Too bad, you lost ... But try again, i'm sure you can do it !",
"targets": [ NodePath("../CenterContainer/VBoxContainer/GameOverDialog") ]
} ]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SaveMenuButton" to="." method="_on_SaveMenuButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
